[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kani"
version = "0.7.1"
authors = [
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
    { name = "Liam Dugan", email = "ldugan@seas.upenn.edu" },
    { name = "Alyssa Hwang", email = "ahwang16@seas.upenn.edu" },
]
description = "kani (カニ) is a lightweight and highly hackable framework for chat-based language models with tool usage/function calling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
huggingface = [
    "transformers>=4.0.0,<5.0.0",
]

llama = [
    "sentencepiece~=0.1.99",
]

openai = [
    "tiktoken>=0.4.0,<1.0.0",
]

ctransformers = [
    "ctransformers>=0.2.25,<1.0.0",
]

anthropic = [
    "anthropic~=0.7.3",
]

[project.urls]
"Homepage" = "https://github.com/zhudotexe/kani"
"Bug Tracker" = "https://github.com/zhudotexe/kani/issues"

[tool.black]
line-length = 120
preview = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["llama: these tests use a real LLaMA v2 model."]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
known_first_party = ["kani"]
# I am bound by pycharm's import autosorting rules
no_lines_before = "LOCALFOLDER"
reverse_relative = true
combine_as_imports = true
