[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kani"
dynamic = ["version"]
authors = [
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
    { name = "Liam Dugan", email = "ldugan@seas.upenn.edu" },
    { name = "Alyssa Hwang", email = "ahwang16@seas.upenn.edu" },
]
description = "kani (カニ) is a lightweight and highly hackable framework for chat-based language models with tool usage/function calling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
all = [
    "kani[huggingface,llama,cpp,openai,anthropic]",
]

huggingface = [
    "transformers>=4.28.0,<5.0.0",
]

llama = [
    "protobuf",
    "sentencepiece>=0.1.99,<1.0.0",
]

cpp = [
    "llama-cpp-python>=0.2.0,<1.0.0",
    "huggingface-hub",
]

openai = [
    "openai>=1.26.0,<2.0.0",
    "tiktoken>=0.7.0,<1.0.0",
]

anthropic = [
    "anthropic>=0.27.0,<1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/zhudotexe/kani"
"Bug Tracker" = "https://github.com/zhudotexe/kani/issues"

[tool.hatch]
version.path = "kani/_version.py"

[tool.black]
line-length = 120
preview = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["llama: these tests use a real LLaMA v2 model."]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
known_first_party = ["kani"]
# I am bound by pycharm's import autosorting rules
no_lines_before = "LOCALFOLDER"
reverse_relative = true
combine_as_imports = true
